--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,19 @@
         android:theme="@style/Theme.Cookbook"
         tools:targetApi="31">
         <activity
-            android:name=".PersonalInfoActivity"
+            android:name=".ui.AddCookbookActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.DetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.SearchActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.MyReleaseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.PersonalInfoActivity"
             android:exported="false" />
         <activity
             android:name=".ui.ChangePasswordActivity"
