--- a/common/build.gradle
+++ b/common/build.gradle
@@ -34,7 +34,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
 
+    api 'com.google.code.gson:gson:2.8.9'
     api 'com.github.bumptech.glide:glide:4.13.2'
+    api 'com.gcssloop.widget:rclayout:1.8.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
