--- a/common/build.gradle
+++ b/common/build.gradle
@@ -15,6 +15,9 @@ android {
     }
 
     buildTypes {
+        android.buildFeatures {
+            viewBinding = true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -36,7 +39,11 @@ dependencies {
 
     api 'com.google.code.gson:gson:2.8.9'
     api 'com.github.bumptech.glide:glide:4.13.2'
+    api 'com.github.DylanCaiCoding.ViewBindingKTX:viewbinding-ktx:2.1.0'
+    api 'com.github.DylanCaiCoding.ViewBindingKTX:viewbinding-brvah:2.1.0'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
     api 'com.gcssloop.widget:rclayout:1.8.1'
+    api 'com.airbnb.android:lottie:5.2.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
