--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:theme="@style/Theme.Cookbook"
         tools:targetApi="31">
         <activity
+            android:name=".ui.AuditDishActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.CategoryDishListActivity"
             android:exported="false" />
         <activity
