--- a/common/build.gradle
+++ b/common/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
 
     api 'com.google.code.gson:gson:2.8.9'
+    api 'org.greenrobot:eventbus:3.3.1'
     api 'com.github.bumptech.glide:glide:4.13.2'
     api 'com.github.DylanCaiCoding.ViewBindingKTX:viewbinding-ktx:2.1.0'
     api 'com.github.DylanCaiCoding.ViewBindingKTX:viewbinding-brvah:2.1.0'
